Click and turn red - only script used

--- a/0x15-javascript-web_jquery/2-main.html
+++ b/0x15-javascript-web_jquery/2-main.html
@@ -8,7 +8,7 @@
     <header> 
       First HTML page
     </header>
-    <div id="red_header" onclick="headerColor()">Red header</div>
+    <div id="red_header">Red header</div>
     <footer>
       ALX - 2017
     </footer>
